2006-07-24  Michael Kelly  <pioto@pioto.org>

	* Drop the s from the user and group DBDIR subdirs.

2006-07-20  Michael Kelly  <pioto@pioto.org>

	* New version - 0.1.3
	
	* bash/auth/: Change naming scheme to ${USERLAND}-${ELIBC} 
	instead of simply ${USERLAND}. Add BSD auth modules.

2006-07-19  Michael Kelly  <pioto@pioto.org>

	* eselect/: Fix eselect module to use proper DBDIR, etc. by 
	sourcing $scriptdir/common/config.sh

2006-07-18  Michael Kelly  <pioto@pioto.org>

	* New version - 0.1.2

2006-07-10  Michael Kelly  <pioto@pioto.org>

	* Initial build - version 0.1.0