@@ -6,8 +6,10 @@ installbackenddir = $(datadir)/$(PACKAGE)/
 
 installbackend_SCRIPTS = \
 	addgroup.sh \
-	adduser.sh
+	adduser.sh \
+	db.sh
 
 EXTRA_DIST = \
 	addgroup.sh.in \
-	adduser.sh.in
+	adduser.sh.in \
+	db.sh.in
