@@ -1,0 +1,3 @@
+#!/bin/sh
+# Add all the provided users and groups to the system.
+
