@@ -1,0 +1,2 @@
+#!/bin/sh
+# Remove all the given users and groups from the system.
